# branch-time

./: .gitignore  GitRepositoryError.py  LICENSE  README.md  jira.py  pyproject.toml  requiriments.txt  run windows.bat
.github/workflows/: ci.yml
branch_time/: jira.py
tests/: test_branch.py
