[tool.poetry]
name = "branch-time"
version = "0.1.4"
description = "Counts time in a branch"
license="BeerWare"
authors = ["Icaro Nunes"]
readme = "README.md"
packages = [{include = "branch_time"}]
classifiers= [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
typer = "^0.7.0"
typer-cli = "^0.0.13"
click = "^8.0"
pytest = "^7.3.1"
rich = "^13.3.4"

[tool.poetry.scripts]
branchtime = "branch_time.jira:app"
branch-time = "branch_time.jira:app"

[tool.poetry.urls]
"Repository" = "https://github.com/icaronunes/branch-time" 
"Bug Tracker" = "https://github.com/icaronunes/branch-time/issues"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[settings]
known_third_party = ["pytest", "requests"]

[tools.black]
line-length = 120

[tools.isort]
profile = "black"
